Repo reorganization, watchdog package works